# cognize

./: CHANGELOG.md  CITATION.cff  LICENSE.txt  NOTICE.txt  README.md  Readme.md  __init__.py  pyproject.toml  requirements.txt  setup.py
cognize/: __init__.py  __init__.pyi  epistemic.py  meta_learning.py  network.py  perception.py  policies.py  simulation.py
docs/: USER_GUIDE.md
examples/: __init__.py  comp_example.py  genesis_agent.py  mini_newton_brain.py  robort.py  total_demo.py
tests/: runtests.py  test_epistemic.py
