[project]
name = "cognize"
dynamic = ["version"]
description = "Programmable cognition for Python systems."
keywords = ["cognition", "epistemic", "rupture", "projection", "AI", "symbolic", "drift"]
authors = [{ name = "Pulikanti Sashi Bharadwaj", email = "bharadwajpulikanti11@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
viz = ["matplotlib", "seaborn", "pandas"]
dev = ["pytest", "ruff", "mypy", "black", "build", "twine"]

all = ["matplotlib", "seaborn", "pandas", "pytest", "ruff", "mypy", "black", "build", "twine"]

[project.urls]
Homepage = "https://github.com/heraclitus0/cognize"
Source = "https://github.com/heraclitus0/cognize"
Issues = "https://github.com/heraclitus0/cognize/issues"
UserGuide = "https://github.com/heraclitus0/cognize/blob/main/docs/USER_GUIDE.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cognize*"]


[tool.setuptools.dynamic]
version = { attr = "cognize.__version__" }


[tool.setuptools.package-data]
"cognize" = ["py.typed"]
